ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES5/input.ts.stderr
error: Invalid unicode escape
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES5/input.ts:3:10
  |
3 | var x = "\u{67";
  |          ^^^^^

